Agregar inicio_cliente.html y eliminar nav-bar.html

--- a/templates/agendar_cita.html
+++ b/templates/agendar_cita.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% include 'nav-scroller.html' %}
+{% extends 'base.html' %}
 {% block title %}Hora_cita{% endblock %}
 
 {% block body %}
@@ -93,6 +93,9 @@
                   </div>
                 </div>
 
+                
+
+
                 <div class="col-md-5">
                   <label for="tipo_servicio" class="form-label">Tipo de servicio</label>
                   <select class="form-select" id="tipo_servicio" required>
@@ -144,7 +147,7 @@
         <div class="col-md-7 col-lg-8">
           <!--<button class="w-100 btn btn-primary btn-lg" type="submit">Agendar cita</button>-->
           <p align="right"><a class="btn btn-lg btn-primary" href="/inicio">Agendar cita</a></p>
-          
+
         </div>
       </div>
 
