Correción de errores JavaScript en escoger_cita.html.

--- a/templates/hora_cita.html
+++ b/templates/hora_cita.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% include 'nav-scroller.html' %}
+{% extends 'base.html' %}
 {% block title %}Hora_cita{% endblock %}
 
 {% block body %}
