--- a/templates/fecha_cita.html
+++ b/templates/fecha_cita.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% include 'nav-scroller.html' %}
+{% extends 'base.html' %}
 {% block title %}Fecha cita{% endblock %}
 
 {% block body %}
