--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -31,7 +31,7 @@
             <div class="carousel-caption text-start" img="">
               <h1 class="font-colors-carrusel">Agenda una cita en True Beauty</h1>
               <p class="font-colors font-style">¡No pierdas la oportunidad de tener los mejores tratamientos y los mejores resultados!</p>
-              <p><a class="btn btn-lg btn-primary" href="/fecha_cita">Agendar cita</a></p>
+              <p><a class="btn btn-lg btn-primary" href="/escoger_cita">Agendar cita</a></p>
             </div>
           </div>
         </div>
@@ -47,7 +47,7 @@
             <div class="carousel-caption">
               <h1 class="font-colors-carrusel">Conoce las citas que has hecho</h1>
               <p class="font-colors font-style">Consulta el día y la hora de tu cita</p>
-              <p><a class="btn btn-lg btn-primary" href="/consultar_cita">Consultar cita</a></p>
+              <p><a class="btn btn-lg btn-primary" href="/consultar_citas">Consultar cita</a></p>
             </div>
           </div>
         </div>
