--- a/templates/informacion_cita.html
+++ b/templates/informacion_cita.html
@@ -7,8 +7,10 @@
 
 <head>
     <!-- Custom styles for this template -->
-{#    <link href="informacion_cita.css" rel="stylesheet">#}
+    {#
+    <link href="informacion_cita.css" rel="stylesheet">#}
 </head>
+
 
 <body>
 
@@ -16,21 +18,20 @@
     <main class="d-flex flex-nowrap">
 
 
-        <div class="b-example-divider b-example-vr"></div>
+        <!--<div class="b-example-divider b-example-vr" style="margin-top: 4%;"></div>-->
 
-        <div class="d-flex flex-column flex-shrink-0 p-3 bg-light" style="width: 280px;">
-            <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-                <svg class="bi pe-none me-2" width="40" height="32">
-                    <use xlink:href="#bootstrap"></use>
-                </svg>
-                <span class="fs-4">Sidebar</span>
+        <div class="d-flex flex-column flex-shrink-0 p-3 bg-light" style="width: 280px; margin-top: 4%;">
+            <a >
+                <span class="fs-4">Citas próximas</span>
             </a>
             <hr>
             <ul class="nav nav-pills flex-column mb-auto">
 
                 {% for cita in lista_citas %}
                 <li class="nav-item">
-                    <a href="/informacion_cita/{{ cita['id_cita'] }}" class="nav-link {% if cita['id_cita']== dicc_cita['id_cita'] %}active{% else %} link-dark{% endif %}" aria-current="page">
+                    <a href="/informacion_cita/{{ cita['id_cita'] }}"
+                        class="nav-link {% if cita['id_cita']== dicc_cita['id_cita'] %}active{% else %} link-dark{% endif %}"
+                        aria-current="page">
                         <svg class="bi pe-none me-2" width="16" height="16">
                             <use xlink:href="#home"></use>
                         </svg>
@@ -38,7 +39,7 @@
                     </a>
                 </li>
                 {% endfor %}
-            <!--
+                <!--
                 <li>
                     <a href="#" class="nav-link link-dark">
                         <svg class="bi pe-none me-2" width="16" height="16">
@@ -57,7 +58,15 @@
                 </li>
                 -->
 
+            <hr>
+            <a >
+                <span class="fs-4">Citas pasadas</span>
+            </a>
+
             </ul>
+
+            
+            
 
             <!--<div class="dropdown">
                 <a href="#" class="d-flex align-items-center link-dark text-decoration-none dropdown-toggle"
@@ -76,11 +85,25 @@
                 </ul>
             </div>-->
         </div>
-           
 
-        <div class="col-md-7 col-lg-8" style="margin-top: 14%">
+
+
+
+        <div class="col-md-7 col-lg-8" style="margin-top: 10%">
             <form class="needs-validation" novalidate>
-                <div class="row g-3" style="padding-left: 12%; padding-top: 5%;">
+                <div class="row g-3" style="padding-left: 7%; padding-top: 0%; margin-top: -9%;">
+
+                    <div class="d-flex align-items-center p-3 my-3 text-white bg-purple rounded shadow-sm" style="background-color:  #7CB8EB">
+                        <img class="me-3" src="/static/images/calendario_fecha_cita.png" alt="" width="48" height="48">
+                        <div class="lh-1">
+                            <h1 class="h6 mb-0 text-white lh-1">SUCURSAL: LAS LOMAS</h1>
+                            <small>Avenida villa de seris</small>
+                            <small>/</small>
+                            <small>+552 6621284028</small>
+                        </div>
+                    </div>
+
+
                     <div class="col-sm-6">
                         <label for="firstName" class="form-label">Nombre</label>
                         <input type="text" class="form-control" id="firstName" placeholder="Lucia" value="" required>
@@ -108,24 +131,27 @@
                         </div>
                     </div>
 
+
                     <div class="col-md-5">
                         <label for="tipo_servicio" class="form-label">Tipo de servicio</label>
                         <select class="form-select" id="tipo_servicio" required>
                             <!--<option value="">Seleccion...</option>-->
                             {% for servicio in lista_servicios %}
-                            <option value="{{ servicio['id_servicio'] }}" {% if servicio['nombre'] == dicc_cita['nombre_servicio'] %}selected{% endif %}>
+                            <option value="{{ servicio['id_servicio'] }}" {% if
+                                servicio['nombre']==dicc_cita['nombre_servicio'] %}selected{% endif %}>
                                 {{ servicio['nombre'] }}</option>
 
                             {% endfor %}
                         </select>
                         <div class="invalid-feedback">
-                            Please select a valid service.
+                            Selecciona un servicio valido
                         </div>
                     </div>
 
                     <div class="col-md-4">
                         <label for="fecha" class="form-label">Fecha</label>
-                        <input type="text" class="form-control" id="fecha" placeholder="{{ dicc_cita['fecha'] }}" required>
+                        <input type="text" class="form-control" id="fecha" placeholder="{{ dicc_cita['fecha'] }}"
+                            required>
                         <div class="invalid-feedback">
                             Ingrese una fecha
                         </div>
@@ -133,11 +159,28 @@
 
                     <div class="col-md-3">
                         <label for="hora" class="form-label">Hora (24h)</label>
-                        <input type="text" class="form-control" id="hora" placeholder="{{ dicc_cita['hora'] }}" required>
+                        <input type="text" class="form-control" id="hora" placeholder="{{ dicc_cita['hora'] }}"
+                            required>
                         <div class="invalid-feedback">
                             hora requerida.
                         </div>
                     </div>
+
+                    <div class="col-12">
+                        <label for="total" class="form-label">Total (Pesos)</label>
+                        <input type="text" class="form-control" id="total" placeholder="" value="" required>
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="exampleFormControlTextarea1" class="form-label">Descripción de servicio</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    </div>
+
+                    <hr>
+
+                    <p align="right"><a class="btn btn-lg btn-primary" href="">Editar cita</a></p>
+
+
                 </div>
             </form>
         </div>
@@ -147,7 +190,8 @@
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
 
-{#    <script src="sidebars.js"></script>#}
+    {#
+    <script src="sidebars.js"></script>#}
 </body>
 
 </html>
