--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,137 +1,64 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" dir="ltr">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-    <meta name="generator" content="Hugo 0.104.2">
-    <title>SIGN UP TRUE BEAUTY</title>
-
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/sign-in/">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-
-
-
-    <link href="/docs/5.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-
-    <!-- Favicons -->
-    <link rel="apple-touch-icon" href="/docs/5.2/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
-    <link rel="icon" href="/docs/5.2/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
-    <link rel="icon" href="/docs/5.2/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
-    <link rel="manifest" href="/docs/5.2/assets/img/favicons/manifest.json">
-    <link rel="mask-icon" href="/docs/5.2/assets/img/favicons/safari-pinned-tab.svg" color="#712cf9">
-    <link rel="icon" href="/docs/5.2/assets/img/favicons/favicon.ico">
-    <meta name="theme-color" content="#712cf9">
-
-    <!-- Custom styles for this template -->
-    <link href="../static/css/signup.css" rel="stylesheet">
+    <meta charser="utf-8">
+    <title>SignUp</title>
+    <link rel="stylesheet" href="/static/css/registrarse.css"></link>
+    <link rel="stylesheet" href='https://fonts.googleapis.com/css?family=Montserrat'></link>
 </head>
 
 <body>
-
-    <div class="card mb-3" style="max-width: 686px; width: 800%; height: auto">
-        <div class="row g-0">
-
-            <div class="col-md-4 ">
-                <img src="/static/images/cleopatra.png" class="img-fluid rounded-start position-png" alt="...">
-            </div>
-            <div class="col-md-8">
-                <div class="card-body">
-
-                    <!--<img class="mb-4" src="/static/images/cleopatra.png" alt="" width="50" height="50">-->
-                    <h5 class="card-title">Crea una cuenta en True Beauty</h5>
-                    {% for message in get_flashed_messages() %}
-                    <div class="alert alert-secondary alert-dismissible fade show" role="alert">
-                        {{message}}
-                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                    </div>
-                    {% endfor %}
-                    <div>
-                        <form class="needs-validation" method="POST" novalidate>
-                            <div>
-
-                                <label for="firstName" class="form-label">Nombre</label>
-                                <input type="text" class="form-control" id="firstName" placeholder="" name="nombre" value="" required>
-                                <div class="invalid-feedback">
-                                    Ingrese un nombre valido
-                                </div>
-
-
-
-                                <label for="lastName" class="form-label">Apellido Paterno</label>
-                                <input type="text" class="form-control" id="lastName" name="apellido1" placeholder="" value="" required>
-                                <div class="invalid-feedback">
-                                    Ingrese un apellido valido
-                                </div>
-
-                                <label for="lastName" class="form-label">Apellido Materno</label>
-                                <input type="text" class="form-control" id="lastName" name="apellido2" placeholder="" value="" required>
-                                <div class="invalid-feedback">
-                                    Ingrese un apellido valido
-                                </div>
-
-
-                                <label for="email" class="form-label">Email</label>
-                                <div class="input-group has-validation">
-                                    <span class="input-group-text">@</span>
-                                    <input type="email" class="form-control" id="email" name="correo" placeholder="email" required>
-                                    <div class="invalid-feedback">
-                                        Your email is required.
-                                    </div>
-                                </div>
-
-
-                                <label for="inputPassword" class="form-label">Contraseña</label>
-                                <div>
-                                    <input type="password" class="form-control" id="password" name="password1" required>
-                                </div>
-
-                                <label for="inputPassword" class="form-label">Confirmar Contraseña</label>
-                                <div>
-                                    <input type="password" class="form-control" id="password2" name="password2" oninput="check(this)" required >
-                                </div>
-                                <script language='javascript' type='text/javascript'>
-                                    function check(input) {
-                                        if (input.value != document.getElementById('password').value) {
-                                            input.setCustomValidity('Password Must be Matching.');
-                                        } else {
-                                            // input is valid -- reset the error message
-                                            input.setCustomValidity('');
-                                        }
-                                    }
-                                </script>
-                                <label for="telefono" class="form-label">Teléfono</label>
-                                <input type="text" class="form-control" id="telefono" name="telefono" placeholder="xxx-xxx-xxx"
-                                    required>
-                                <div class="invalid-feedback">
-                                    Ingrese un número de teléfono
-                                </div>
-                                <a> </a>
-                                <br>                
-                                <button class="w-100 btn btn-lg btn-primary" type="submit" name="enviar" value="Enviar">Registrarse</button>
-
-                            </div>
-                            </form>
-                    </div>
-
-
-                </div>
+    
+    <div class="center">
+        <img src="/static/images/cleopatra.png" alt="" width="48" height="48">
+        <h1>Registrarse</h1>
+        <form method="post">
+            <div class="txt_field">
+                <input type="text" required ></input>
+                <span ></span>
+                <label>Nombre</label>
             </div>
 
+            <div class="txt_field">
+                <input type="email" required ></input>
+                <span ></span>
+                <label>Email</label>
+            </div>
 
-        </div>
+            <div class="txt_field">
+                <input type="password" required ></input>
+                <span ></span>
+                <label>Contraseña</label>
+            </div>
 
-        <p class="mt-5 mb-3 text-muted text-center">&copy; 2017–2022</p>
+            <div class="txt_field">
+                <input type="password" required ></input>
+                <span ></span>
+                <label>Repetir contraseña</label>
+            </div>
+
+            
+            <input type="submit" value="Registrarse" required ></input>
+
+            <div class="login_link">
+                ¿Ya estás registrado?
+                <a href="#">Ingresa sesión</a>
+            </div>
+
+        </form>
     </div>
+</body>
+
+
+</html>
 
 
 
 
-    <!--<div >
+
+
+<!--<div >
         <form>
             <div class="card" style="align-self: unset;">
                 <div style="display: flex;">
@@ -209,7 +136,7 @@
     </div>
 
     -->
-    <!-- <main class="form-signin">
+<!-- <main class="form-signin">
         <form>
             <div class="card" style="align-self: unset;">
                 <div style="display: flex;">
@@ -284,7 +211,3 @@
                 <p class="mt-5 mb-3 text-muted">&copy; 2017–2022</p>
         </form>
     </main> -->
-</body>
-
-
-</html>
