Agregar metodos para ser posible obtener las horas disponibles de acuerdo inforamción de la cita. Agregar confirmar_cita.html.

--- a/templates/escoger_cita.html
+++ b/templates/escoger_cita.html
@@ -122,7 +122,7 @@
         <div class="row g-5 center">
           <div class="col-md-7 col-lg-8">
 {#              SE PUEDE MODIFICAR PERO SOLO A TRAVES DE CLASES (class="..."), NO CAMBIAR TIPO DE ETIQUETA (<button></button>) O EL ATRIBUTO "type" PORFAVOR #}
-            <button class="w-100 btn btn-primary btn-lg" type="submit" >Agendar cita</button>
+            <button class="w-100 btn btn-primary btn-lg" type="submit" >Continuar</button>
             {# <p align="right"><a class="btn btn-lg btn-primary" href="/inicio">Agendar cita</a></p>#}
 
           </div>
