--- a/templates/base.html
+++ b/templates/base.html
@@ -74,15 +74,23 @@
 </head>
 
 <header>
+
+  
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
       <img class="me-3" src="/static/images/cleopatra.png" alt="" width="30" height="30">
       <a class="navbar-brand" href="/">True Beauty</a>
 
+      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbarLight" aria-controls="offcanvasNavbarLight">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      
+ <!-- Favicons -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
         aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
           <li class="nav-item">
@@ -104,6 +112,8 @@
           <a class="btn btn-outline-light me-2" href="/signup">Sign-up</a>    
           {% endif %}
         </div>
+
+        
 
 
 
