--- a/static/css/registrarse.css
+++ b/static/css/registrarse.css
@@ -15,12 +15,15 @@ body{
     width: 400px;
     background: white;
     border-radius: 10px;
+    max-width: -webkit-fill-available;
+    max-height: 625px;
 }
 
 .center h1{
     text-align: center;
     padding: 0 0 15px 0;
     border-bottom: 1px solid silver;
+    font-size: 20px;
 }
 
 .center img{
@@ -115,7 +118,7 @@ input[type="submit"]:hover{
 }
 
 .login_link{
-    margin: 30px 0;
+    margin: 15px 0;
     text-align: center;
     font-size: 16px;
     color: #666666;
