--- a/templates/ver_cita_gerente_recepcionista.html
+++ b/templates/ver_cita_gerente_recepcionista.html
@@ -29,48 +29,34 @@
             <table class="table table-striped table-hover">
                 <thead>
                     <tr>
-                        <th scope="col">Id Cita</th>
                         <th scope="col">Usuario</th>
-                        <th scope="col">Estilista</th>
+                        <th scope="col">Fecha</th>
+                        <th scope="col">Hora</th>
                         <th scope="col">Monto</th>
-                        <th scope="col">Info Cita</th>
+                        <th scope="col">Sucursal</th>
+                        <th scope="col">Más información</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <th scope="row">1</th>
-                        <td>LuisPelon</td>
-                        <td>Andres</td>
-                        <td>45</td>
-                        <td><button type="button" class="btn btn-primary btn-sm">Small button</button></td>
+                {% for cita in citas %}
+                     <tr>
+                        <th scope="row">{{ cita['nombre_completo'] }}</th>
+                        <td>{{ cita['fecha'] }}</td>
+                        <td>{{ cita['hora'] }}</td>
+                        <td>${{ cita['monto'] }}</td>
+                         <td>{{ cita['nombre_sucursal'] }}</td>
+                        <td><a href="/informacion_cita/{{ cita['id_cita'] }}"  class="btn btn-primary btn-sm">Ver cita</a></td>
                     </tr>
-                    <tr>
-                        <th scope="row">2</th>
-                        <td>LuisPelon</td>
-                        <td>Andres</td>
-                        <td>45</td>
-                        <td><button type="button" class="btn btn-primary btn-sm">Small button</button></td>
-                    </tr>
-                    <tr>
-                        <th scope="row">3</th>
-                        <td>LuisPelon</td>
-                        <td>Andres</td>
-                        <td>45</td>
-                        <td><button type="button" class="btn btn-primary btn-sm">Small button</button></td>
-                    </tr>
-                    <tr>
-                        <th scope="row">4</th>
-                        <td>LuisPelon</td>
-                        <td>Andres</td>
-                        <td>45</td>
-                        <td><button type="button" class="btn btn-primary btn-sm">Small button</button></td>
-                    </tr>
+
+                {% endfor %}
+
                 </tbody>
 
             </table>
 
+
             <small class="d-block text-end mt-3">
-                <a href="/escoger_cita">Agendar cita nueva</a>
+                <a href="/escoger_cita" class="btn btn-primary btn-sm">Agendar cita nueva</a>
             </small>
         </div>
 
